# libmatcher

./: AUTHORS.txt  CMakeLists.txt  MatchEntry.cpp  MatchEntry.hpp  MatchEntryGPU.cpp  MatchEntryGPU.hpp  Matcher.cpp  Matcher.hpp  MatcherUtils.cpp  MatcherUtils.hpp  MatcherWrapper.py  OpponentColorDescriptor.cpp  OpponentColorDescriptor.hpp  README.md  matcher4fmbt.py  matcher_consts.hpp  matcher_extern.hpp  matcher_types.cpp  matcher_types.hpp  matcher_types.py
debian/: changelog  control  libmatcher-dev.install  libmatcher.install  rules
doc/: Doxyfile  conf.py  cppapi.rst  index.rst  installation.rst  intro.rst  locate.rst  locatechars.rst  pythonapi.rst  verify.rst
test/cpp/: CMakeLists.txt  example_OCR.cpp  example_featurematching.cpp  example_locate.cpp  example_locatecharacters.cpp  example_verify.cpp
test/python/: matcher_in_fmbt.py  test_matcher.py
